--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -15,24 +15,25 @@ table {
   }
 }
 
-thead {
-  background-color: $lighter-gray;
-  border-bottom: 1px solid $light-gray;
-}
+//thead {
+//  background-color: $lighter-gray;
+//  border-bottom: 1px solid $light-gray;
+//}
 
 th {
   padding: 0.5em;
   font-weight: bold;
   text-align: left;
-  border-right: 1px solid $light-gray;
+//  border-right: 1px solid $light-gray;
 }
 
 td {
   padding: 0.5em;
-  border-bottom: 1px solid $light-gray;
-  border-right: 1px solid $light-gray;
+//  border-bottom: 1px solid $light-gray;
+//  border-right: 1px solid $light-gray;
 }
 
 tr, td, th {
   vertical-align: middle;
+  border: none;
 }
