--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -6,7 +6,7 @@ table {
   margin-bottom: 1em;
   width: 100%;
   font-family: $global-font-family;
-  font-size: $type-size-7;
+  font-size: 0.9em;
   border-collapse: collapse;
   border: 0px solid #FFFFFF;
 
