--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-<a href="/about/">About Me</a> | <a href="/research/">Research</a> | <a href="/publications/">Publications</a> | <a href="/presentations/">Presentations</a> | <a href="/cv/">CV</a>
+<a href="/about/">About Me</a> | <a href="/research/">Research</a> | <a href="/publications/">Publications</a> | <a href="/presentations/">Presentations</a> | <a href="/software/">Software</a> |<a href="/cv/">CV</a>
 <!-- end custom footer snippets -->
