--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,5 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
-
+<link rel="shortcut icon" type="image/png" href="{{ base_path }}/images/site-logo.png">
 <meta http-equiv="cleartype" content="on">
