--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -123,7 +123,7 @@
 
 .author__bio {
   margin: 0;
-  font-size: 1.5em;
+  font-size: $type-size-4;
 
   @include breakpoint($large) {
     margin-top: 10px;
