Added .sidebar .author__bio

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -123,12 +123,16 @@
 
 .author__bio {
   margin: 0;
-  font-size: $type-size-4;
 
   @include breakpoint($large) {
     margin-top: 10px;
     margin-bottom: 20px;
   }
+}
+
+.sidebar .author__bio {
+  font-family: $sans-serif;
+  font-size: $type-size-6;
 }
 
 .author__urls-wrapper {
