--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -4,6 +4,6 @@
 <a href="/publications/">Publications</a> | 
 <a href="/presentations/">Presentations</a> | 
 <a href="/software/">Software</a> |
-<a href="/cv/">CV</a> 
+<a href="/cv/">CV</a> |
 <a href="/private/" onclick="return passwordProtect();">Private</a>
 <!-- end custom footer snippets -->
