--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -5,5 +5,5 @@
 <a href="/presentations/">Presentations</a> | 
 <a href="/software/">Software</a> |
 <a href="/cv/">CV</a> |
-<a href="/private/" onclick="return passwordProtect();">Private</a>
+<a href="#" onclick="return passwordProtect();">Private</a>
 <!-- end custom footer snippets -->
