--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@ layout: compress
     {% include head.html %}
     {% include head/custom.html %}
     <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+    <link rel="stylesheet" href="{{ '/assets/css/main.scss' | relative_url }}">
+
 
   </head>
 
@@ -18,6 +20,8 @@ layout: compress
     {% include browser-upgrade.html %}
     {% include masthead.html %}
     <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+    <link rel="stylesheet" href="{{ '/assets/css/main.scss' | relative_url }}">
+
 
     {{ content }}
 
